Bug 103993 - [CSS Regions] Blocks don't relayout children if the width of a region changes
Summary: [CSS Regions] Blocks don't relayout children if the width of a region changes
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords: AdobeTracked
: 103680 (view as bug list)
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2012-12-04 05:51 PST by Andrei Bucur
Modified: 2012-12-12 09:09 PST (History)
5 users (show)

See Also:


Attachments
Patch (12.44 KB, patch)
2012-12-05 06:05 PST, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Bucur 2012-12-04 05:51:01 PST
Before r135750 the line layout algorithm was also detecting lines invalidated by regions changing width. The case of a region changing width should be handled by the blocks by setting the relayoutChildren flag and thus invalidating the lines.
Comment 1 Andrei Bucur 2012-12-05 06:05:06 PST
Created attachment 177734 [details]
Patch
Comment 2 Dave Hyatt 2012-12-05 11:01:07 PST
Comment on attachment 177734 [details]
Patch

r=me
Comment 3 WebKit Review Bot 2012-12-05 19:47:55 PST
Comment on attachment 177734 [details]
Patch

Clearing flags on attachment: 177734

Committed r136793: <http://trac.webkit.org/changeset/136793>
Comment 4 WebKit Review Bot 2012-12-05 19:47:58 PST
All reviewed patches have been landed.  Closing bug.
Comment 5 Andrei Bucur 2012-12-12 09:09:02 PST
*** Bug 103680 has been marked as a duplicate of this bug. ***