[CSS Regions] Blocks don't relayout children if the width of a region changes https://bugs.webkit.org/show_bug.cgi?id=103993

Patch by Andrei Bucur <abucur@adobe.com> on 2012-12-05
Reviewed by David Hyatt.

Source/WebCore:

After r135750 lines are no longer invalidating when regions change width. This is happening because the detection for the width change was being done
only at line layout time. This patch moves the line relayout decision to the containing block by setting the relayoutChildren flag if the block
has no region chain attached.

Tests: fast/regions/region-width-change-relayout-1.html
       fast/regions/region-width-change-relayout-2.html
       fast/regions/region-width-change-relayout-3.html

* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::logicalWidthChangedInRegions):

LayoutTests:

The first test covers the case of reducing the width of a region for a block content node.
The second test covers the case of expanding the width of a region for a block content node.
The third test covers the case of reducing the width of a region for an inline content node.

* fast/regions/region-width-change-relayout-1-expected.html: Added.
* fast/regions/region-width-change-relayout-1.html: Added.
* fast/regions/region-width-change-relayout-2-expected.html: Added.
* fast/regions/region-width-change-relayout-2.html: Added.
* fast/regions/region-width-change-relayout-3-expected.html: Added.
* fast/regions/region-width-change-relayout-3.html: Added.

Canonical link: https://commits.webkit.org/122370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136793 268f45cc-cd09-0410-ab3c-d52691b4dbfc